Added a new endpoint to return event types
