# EventService.Api/Dtos/Enums/EventType.cs
@@ -1,16 +1,0 @@
-namespace EventService.Dtos.Enums
-{
-    public enum EventType
-    {
-        Other = 1,
-        Walk = 2,
-        Coffee = 3,
-        Beer = 4,
-        Cocktail = 5,
-        HouseParty = 6,
-        Food = 7,
-        Study = 8,
-        Game = 9
-    }
-
-}
