# EventService.Api/Dtos/Responses/EventReadDto.cs
@@ -1,5 +1,5 @@
 using System;
-using EventService.Dtos.Enums;
+using System.Collections.Generic;
 
 namespace EventService.Dtos.Responses
 {
@@ -8,11 +8,13 @@ namespace EventService.Dtos.Responses
         public string Id { get; set; }
         public string OwnerId { get; set; }
         public string Title { get; set; }
-        public EventType EventType { get; set; }
+        public EventTypeDto EventType { get; set; }
+        public ICollection<EventUserReadDto> EventUsers { get; set; }
         public string Description { get; set; }
         public bool IsActive { get; set; }
         public double Latitude { get; set; }
         public double Longitude { get; set; }
+        public int BuddiesCount { get; set; }
         public DateTime StartTime { get; set; }
         public DateTime EndTime { get; set; }
         public DateTime CreatedAt { get; set; }
