# EventService.Api/Models/EventType.cs
@@ -1,0 +1,10 @@
+
+namespace EventService.Models
+{
+    public class EventType
+    {
+        public int Id { get; set; }
+        public string Name { get; set; }
+        public string Ascii { get; set; }
+    }
+}
